--- a/index.html
+++ b/index.html
@@ -8,13 +8,35 @@
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Travelgram</title>
+  <title>Travelgram | Perfil de viagens</title>
   <link rel="stylesheet" href="./styles/index.css">
 
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 
 </head>
 <body>
+  <div class="bg-surface-color">
+  <header>
+    <nav class="container">
+      <a href="#" id="logo">
+        <img src="./assents/Logo.svg" alt="Logomarca">
+      </a>
 
+      <ul id="primary-menu">
+        <li>
+          <a href="#">
+            <img src="./assents/Icons/MagnifyingGlass.svg" alt="Lupa">
+          </a>
+        </li>
+        <li><a href="#">Explorer</a></li>
+        <li><a href="#">Minhas viagens</a></li>
+        <li><a href="#">
+          <img src="./Profile pic.png" alt="Imagem de Isabela Torres">
+          </a>
+        </li>
+      </ul>
+    </nav>
+  </header>
+</div>
 </body>
 </html>
