--- a/index.html
+++ b/index.html
@@ -61,5 +61,21 @@
       </div>
   </header>
 </div>
+
+  <main class="container">
+    <img src="./assents/Imagens/Image 01.png" alt="">
+    <img src="./assents/Imagens/Image 02.png" alt="">
+    <img src="./assents/Imagens/Image 03.png" alt="">
+    <img src="./assents/Imagens/Image 04.png" alt="">
+    <img src="./assents/Imagens/Image 05.png" alt="">
+    <img src="./assents/Imagens/Image 06.png" alt="">
+    <img src="./assents/Imagens/Image 07.png" alt="">
+    <img src="./assents/Imagens/Image 08.png" alt="">
+    <img src="./assents/Imagens/Image 09.png" alt="">
+    <img src="./assents/Imagens/Image 10.png" alt="">
+    <img src="./assents/Imagens/Image 11.png" alt="">
+    <img src="./assents/Imagens/Image 12.png" alt="">
+  </main>
+
 </body>
 </html>
