--- a/index.html
+++ b/index.html
@@ -77,5 +77,11 @@
     <img src="./assents/Imagens/Image 12.png" alt="">
   </main>
 
+  <footer class="container">
+    <span>Travelgram &copy; 2024</span>
+    <span>Termos de uso</span>
+    <span>Política de privacidade</span>
+  </footer>
+
 </body>
 </html>
